[#138] Fix overflowing title on month view.

--- a/src/components/vue-cal/styles.scss
+++ b/src/components/vue-cal/styles.scss
@@ -30,6 +30,7 @@ $weekdays-headings-height-with-splits: 3.4em;
 
     &[grow] {
       flex: 1 1 auto;
+      width: 100%;
     }
 
     &[wrap] {
@@ -138,6 +139,7 @@ $weekdays-headings-height-with-splits: 3.4em;
   //==================================//
   &__cells {
     margin: 0 1px 1px 0;
+    .vuecal--events-on-month-view.vuecal--short-events & {width: 99.9%;}
 
     .vuecal--overflow-x.vuecal--week-view & {
       flex-wrap: nowrap;
